# kate-close-except-plugin

./: .kateconfig  CMakeLists.txt  README.md
src/: CMakeLists.txt  close_confirm_dialog.cpp  close_confirm_dialog.h  close_except_plugin.cpp  close_except_plugin.h  ui.rc
